--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     </head>
 
     <Body>
-        <div class="Header-div">
+        <div class="header">
             <header>Justin Honegger</header>
 
             <nav>
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
+                <a href="index.html">About</a> |
+                <a href="portfolio.html">Portfolio</a> |
                 <a href="contact.html">Contact</a>
             </nav>
         </div>
 
-        <div class="Main-div">
+        <div class="main">
             <!--Bio start! Fight!-->
             <section id="biography">
                 <h3>About Me</h3>
@@ -26,12 +26,20 @@
                 <img id="#" src="#" alt="Justin Honegger">
                 <p>
                     I've been working in the Video game industry for 13 years now in various roles.
+                </p>
+                <p>
                     I'm married to my phenomenal wife, Alice, and we have one loud screaming demon (cat) named Wednesday.
+                </p>
+                <p>
                     I've been feeling listless and bored at work so I decided to join this boot camp to increase my skills and manuever better in my life.
+                </p>
+                <p>
                     I'm definitely going to have more games here in the future.
                 </p>
             </section>
         </div>
-        <footer>Copyright &copy;</footer>
+        <div class="footer">
+            Copyright &copy; Justin Honegger 2018
+        </footer>
     </Body>
 </html>
