Background image, formatting, and basic tuning

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="main">
             <!--Bio start! Fight!-->
             <section id="biography">
-                <h3>About Me</h3>
+                <h1>About Me</h1>
                 <!--put your picture here lazybones-->
-                <img id="#" src="#" alt="Justin Honegger">
+                <img src="assets/images/jdh.png" alt="Justin Honegger">
                 <p>
                     I've been working in the Video game industry for 13 years now in various roles.
                 </p>
