--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html class="" lang ="en">
-    <head>
-        <!--character set-->
-        <meta charset="UTF-8">
-        <title>My Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    </head>
+<html class="" lang="en">
 
-    <Body>
+<head>
+    <!--character set-->
+    <meta charset="UTF-8">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<Body>
+    <div id="page-wrap">
         <div class="header">
             <header>Justin Honegger</header>
 
@@ -28,10 +30,12 @@
                     I've been working in the Video game industry for 13 years now in various roles.
                 </p>
                 <p>
-                    I'm married to my phenomenal wife, Alice, and we have one loud screaming demon (cat) named Wednesday.
+                    I'm married to my phenomenal wife, Alice, and we have one loud screaming demon (cat) named
+                    Wednesday.
                 </p>
                 <p>
-                    I've been feeling listless and bored at work so I decided to join this boot camp to increase my skills and manuever better in my life.
+                    I've been feeling listless and bored at work so I decided to join this boot camp to increase my
+                    skills and manuever better in my life.
                 </p>
                 <p>
                     I'm definitely going to have more games here in the future.
@@ -40,6 +44,8 @@
         </div>
         <div class="footer">
             Copyright &copy; Justin Honegger 2018
-        </footer>
-    </Body>
+            </footer>
+        </div>
+</Body>
+
 </html>
