--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <!--character set-->
     <meta charset="UTF-8">
     <title>My Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <Body>
     <div id="page-wrap">
         <div class="header">
+            <div class="header2">
             <header>Justin Honegger</header>
 
             <nav>
@@ -18,6 +20,7 @@
                 <a href="portfolio.html">Portfolio</a> |
                 <a href="contact.html">Contact</a>
             </nav>
+            </div>
         </div>
 
         <div class="main">
@@ -39,6 +42,9 @@
                 </p>
                 <p>
                     I'm definitely going to have more games here in the future.
+                </p>
+                <p>
+                    This is an extra paragraph to confirm flow works. Hi Josh!
                 </p>
             </section>
         </div>
