--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,51 @@
     <div id="page-wrap">
         <div class="header">
             <div class="header2">
-            <header>Justin Honegger</header>
+                <header>Justin Honegger</header>
 
-            <nav>
-                <a href="index.html">About</a> |
-                <a href="portfolio.html">Portfolio</a> |
-                <a href="contact.html">Contact</a>
-            </nav>
+                <nav>
+                    <a href="index.html">About</a> |
+                    <a href="portfolio.html">Portfolio</a> |
+                    <a href="contact.html">Contact</a>
+                </nav>
             </div>
         </div>
 
         <div class="main">
-           
+            <h1>Portfolio</h1>
+            <ul class="portfolio">
+                <li class="portfbox">
+                    <a href="#">
+                        <img src="assets/images/portfolio.png" alt="Hangman">
+                        <h2 class="portfboxname">Hangman</h2>
+                    </a>
+                </li>
+                <li class="portfbox">
+                    <a href="#">
+                        <img src="assets/images/portfolio.png" alt="RPG Game">
+                        <h2 class="portfboxname">RPG Game</h2>
+                    </a>
+                </li>
+                <li class="portfbox">
+                    <a href="#">
+                        <img src="assets/images/portfolio.png" alt="Trivia Game">
+                        <h2 class="portfboxname">Trivia Game</h2>
+                    </a>
+                </li>
+                <li class="portfbox">
+                    <a href="#">
+                        <img src="assets/images/portfolio.png" alt="Rutger's Info Widget">
+                        <h2 class="portfboxname">Rutger's Info Widget</h2>
+                    </a>
+                </li>
+                <li class="portfbox">
+                    <a href="#">
+                        <img src="assets/images/portfolio.png" alt="Rock Paper Scissors">
+                        <h2 class="portfboxname">Rock Paper Scissors</h2>
+                    </a>
+                </li>
+                </li>
+            </ul>
         </div>
         <div class="footer">
             Copyright &copy; Justin Honegger 2018
