--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
         </div>
 
         <div class="main">
+            <h1>Contact</h1>
                   <form action="action_page.php">
                 
                     <label for="fname">Name</label>
