--- a/index.html
+++ b/index.html
@@ -28,23 +28,19 @@
             <section id="biography">
                 <h1>About Me</h1>
                 <!--put your picture here lazybones-->
-                <img src="assets/images/jdh.png" alt="Justin Honegger">
+                <img src="assets/images/jdh.png" class="me" alt="Justin Honegger">
                 <p>
                     I've been working in the Video game industry for 13 years now in various roles.
-                </p>
-                <p>
+                <br>
                     I'm married to my phenomenal wife, Alice, and we have one loud screaming demon (cat) named
                     Wednesday.
-                </p>
-                <p>
+                <br>
                     I've been feeling listless and bored at work so I decided to join this boot camp to increase my
                     skills and manuever better in my life.
-                </p>
-                <p>
-                    I'm definitely going to have more games here in the future.
-                </p>
-                <p>
-                    This is an extra paragraph to confirm flow works. Hi Josh!
+                <br>
+                    I'm definitely going to have more games here in the future. In Github in general, not as in for this homework assignment.
+                <br>
+                    This is an extra paragraph to confirm flow works. It needs to be slightly longer for my current resolution. Hi Josh!
                 </p>
             </section>
         </div>
